Report: Corrections based on the review comments

--- a/report/references/PKM.bib
+++ b/report/references/PKM.bib
@@ -1,9 +1,9 @@
 @article{articlePKM,
-author = {Tsokas, Panayiotis and Hsieh, Changchi and Yao, Yudong (Norah) and Lesburguères, Edith and Wallace, Emma and Tcherepanov, Andrew and Jothianandan, Desingarao and Hartley, Benjamin and Pan, Ling and Rivard, Bruno and Farese, Robert and Sajan, Mini and Bergold, Peter and Hernandez, Alejandro and Cottrell, James and Shouval, Harel and Fenton, André and Sacktor, Todd},
+author = "Tsokas, Panayiotis and Hsieh, Changchi and Yao, Yudong (Norah) and Lesburgu{\'{e}}res, Edith and Wallace, Emma and Tcherepanov, Andrew and Jothianandan, Desingarao and Hartley, Benjamin and Pan, Ling and Rivard, Bruno and Farese, Robert and Sajan, Mini and Bergold, Peter and Hernandez, Alejandro and Cottrell, James and Shouval, Harel and Fenton, André and Sacktor, Todd",
 year = {2016},
 month = {05},
 pages = {},
-title = {Compensation for PKMζ in long-term potentiation and spatial long-term memory in mutant mice},
+title = {Compensation for PKM$\zeta$ in long-term potentiation and spatial long-term memory in mutant mice},
 volume = {5},
 journal = {eLife},
 doi = {10.7554/eLife.14846}
