--- a/report/references/food-shortage.bib
+++ b/report/references/food-shortage.bib
@@ -1,5 +1,5 @@
 @article {Placais440,
-	author = {Plaçais, Pierre-Yves and Preat, Thomas},
+	author = "Pla{\c c}ais, Pierre-Yves and Preat, Thomas",
 	title = {To Favor Survival Under Food Shortage, the Brain Disables Costly Memory},
 	volume = {339},
 	number = {6118},
